--- a/view/css/styles.css
+++ b/view/css/styles.css
@@ -6,11 +6,11 @@
 html,
 body {
   height: 100%;
-  background-color: rgb(42, 15, 194);
+  background-color: rgb(100, 215, 250);
 }
 
 body {
-  color: #fff;
+  color: #ffffff;
   text-align: center;
   font-family: 'Raleway', sans-serif;
 }
@@ -70,7 +70,7 @@ body {
 }
 
 #link a {
-  color: #e4132f;
+  color: #11cc59;
   font-size: 1.5em;
   margin-right: 20px;
 }
