--- a/view/index.html
+++ b/view/index.html
@@ -19,7 +19,7 @@
       <div class="main-container">
         <div class="inner cover">
           <span class="glyphicon glyphicon-link"></span>
-          <h1>hhh Shortener</h1>
+          <h1>Link Shortener</h1>
           <h4> https://mvl.biz.id </h4>
 
           <div class="row">
